Prevent logo from bleeding outside of its container

--- a/ietf/templates/includes/styles/header.scss
+++ b/ietf/templates/includes/styles/header.scss
@@ -36,4 +36,6 @@
 .header__logo {
     width: 131px;
     height: 75px;
+    max-width: 100%;
+    max-height: 100%;
 }
